# recipes

./: .gitignore  Cargo.toml
kitchen/: Cargo.toml
kitchen/modules/adding-machine/: Cargo.toml
kitchen/modules/sauce-council/src/: lib.rs
kitchen/modules/sauce-derivative/: Cargo.toml
kitchen/modules/sauce-derivative/src/: lib.rs
kitchen/modules/sauce-treasury/: Cargo.toml  README.md
kitchen/modules/sauce-treasury/src/: lib.rs
kitchen/runtimes/testing/src/: main.rs
src/declarative/: README.md
